Some fixes so that the rubber band scrolling effect doesn't occur on iOS. Outomatic browser touch scaling prevented in favour of pinch zooming.

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,16 @@
 body {
   background-color: rgb(151, 141, 127);
   touch-action: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  position: fixed;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 h2 {
@@ -22,8 +32,8 @@ input {
   margin: 0;
   padding: 0;
   width: 100%;
-  top: 0;
-  bottom: 0;
+  height: 100%;
+  touch-action: none;
 }
 
 .settings {
@@ -31,6 +41,7 @@ input {
   top: 30px;
   background-color: white;
   padding: 0 10px 15px 10px;
+  touch-action: none;
 }
 
 .menu {
@@ -40,6 +51,7 @@ input {
   height: 30px;
   background-color: black;
   opacity: 0.5;
+  touch-action: none;
 }
 
 .canvas {
@@ -48,4 +60,5 @@ input {
   width: 100%;
   top: 0;
   bottom: 0;
+  touch-action: none;
 }
